refactor(runtime): 重构对话、交易与持久化抽卡流程
拆分请求处理、对话表现和清理流程，补齐网络方向、重入保护及玩家恢复边界。抽卡采用有界异步事务日志，扣费与发奖依赖持久化确认，增加管理员核查归档入口及故障测试。保留公开方法签名，暂存抽卡需要等待持久化后确认领取。